Added all information in the guide, how to, and example scripts, for injecting data.

--- a/sled_guide/static/sled_guide/css/guide.css
+++ b/sled_guide/static/sled_guide/css/guide.css
@@ -39,3 +39,8 @@
 .form_table tr:last-child {
     border-bottom: 0px solid #ACACAC;
 }
+
+.choices {
+    font-style: italic;
+    color: #ACACAC;
+}
